gccida/c0/requires_inout
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/requires_inout/src/local-alloc.c:3003:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[*( unsigned __int8 *)p] & 4) != 0 ) 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/requires_inout/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/requires_inout/src/obj/local-alloc.o] Error 1
